# mousetracker

./: AUTHORS  ChangeLog  README  TODO  acinclude.m4  autogen.sh  configure.ac
data/: Makefile.am  mousetracker.daemon.service.in
src/: Makefile.am
src/mouselocator/: Makefile.am  mouselocator.py
src/mousetracker/: Makefile.am  __init__.py  _constants.py.in  client.py  mousetracker.in  mousetracker.py  settings.py  trackers.py
